# libNativeStreaming

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  changelog
.github/workflows/: check_headers.yml  ci.yml
include/native_streaming/: async_reader.hpp  async_writer.hpp  authentication.hpp  client.hpp  common.hpp  logging.hpp  server.hpp  session.hpp
include/native_streaming/utils/: base64.hpp  boost_compatibility_utils.hpp
src/: CMakeLists.txt  async_reader.cpp  async_writer.cpp  authentication.cpp  client.cpp  logging.cpp  server.cpp  session.cpp
src/utils/: base64.cpp  boost_compatibility_utils.cpp
test/: CMakeLists.txt  test_app.cpp  test_authentication.cpp  test_authentication_object.cpp  test_base.hpp  test_base64.cpp  test_client.cpp  test_connection.cpp  test_connection.hpp  test_messages.cpp  test_server.cpp  test_tasks.cpp
